--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "d3": "^6.6.0"
+    "d3": "^6.6.0",
+    "express": "^4.17.1"
   }
 }
